# syncara

./: .gitignore  ARCHITECTURE.md  COMMANDS.md  CONFIG_DESIGN.md  Cargo.toml  Dockerfile  README.md  SYNCARA_VISION.md
.github/workflows/: release.yml
Formula/: syncara.rb
app/: package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: cta-section.tsx  dashboard-page.tsx  docker-section.tsx  docs-page.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  install-section.tsx  interactive-demo.tsx  local-vs-production.tsx  manifesto.tsx  nav.tsx  stats-bar.tsx
benches/: balancer_bench.rs  proxy_throughput.rs
config/: syncara.example.yml
crates/syncara-cli/: Cargo.toml
crates/syncara-cli/src/: main.rs
crates/syncara-core/: Cargo.toml
crates/syncara-core/benches/: bench_main.rs
crates/syncara-core/benches/bench_modules/: balancer.rs  routing.rs  security.rs
crates/syncara-core/src/: dns.rs  lib.rs
crates/syncara-core/src/balancer/: ip_hash.rs  least_connections.rs  mod.rs  round_robin.rs  sticky.rs  weighted.rs
crates/syncara-core/src/brain/: mod.rs  tracker.rs
crates/syncara-core/src/config/: admin.rs  brain.rs  health.rs  listener.rs  mod.rs  session.rs  upstream.rs  validate.rs
crates/syncara-core/src/health/: active.rs  mod.rs  passive.rs
crates/syncara-core/src/observability/: admin.rs  logging.rs  manage.rs  metrics.rs  mod.rs  realtime.rs
crates/syncara-core/src/proxy/: http.rs  mod.rs  websocket.rs
crates/syncara-core/src/routing/: mod.rs  pattern.rs
crates/syncara-core/src/runtime/: mod.rs  signals.rs  status.rs
crates/syncara-core/src/security/: blocklist.rs  config.rs  connection_limiter.rs  mod.rs  rate_limiter.rs  validator.rs
crates/syncara-core/src/session/: cookie.rs  ip_hash.rs  mod.rs
crates/syncara-core/src/support/: error.rs
examples/00-hello-world/: README.md  syncara.yml  test.sh
examples/01-two-backends/: README.md  syncara.yml  test.sh
examples/02-path-routing/: README.md  syncara.yml  test.sh
examples/03-host-routing/: README.md  syncara.yml  test.sh
examples/04-health-checks/: README.md  syncara.yml  test.sh
examples/05-sticky-sessions/: README.md  syncara.yml  test.sh
examples/06-websocket/: README.md  syncara.yml  test.sh
examples/07-weighted/: README.md  syncara.yml  test.sh
examples/08-brain/: README.md  syncara.yml  test.sh
examples/09-security/: README.md  syncara.yml  test.sh
examples/10-production/: README.md  syncara.yml  test.sh
examples/basic/: README.md  docker-compose.yml
examples/websocket-chat/: README.md  docker-compose.yml  package.json  server.js  syncara.yml
scripts/: demo.sh  generate-formula.sh  install.ps1  install.sh  release.sh
tests/integration/: basic_proxy.rs  config_reload.rs  health_check.rs  mod.rs  sticky_session.rs  websocket_test.rs
(+10 files in other folders)
