[workspace]
resolver = "2"
members = [
    "crates/syncara-core",
    "crates/syncara-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Syncara Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
tungstenite = "0.24"
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
bytes = "1"
chrono = "0.4"
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

# Benchmarking & profiling
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion", "frame-pointer"] }

[profile.bench]
debug = 1
opt-level = 3
lto = "fat"
codegen-units = 1
