[package]
name = "syncara"
description = "Syncara Smart Traffic Brain — binary"
version.workspace = true
edition = "2021"
[dependencies]
syncara-core = { path = "../syncara-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
ureq = "2"
flate2 = "1"
tar = "0.4"
tempfile = "3"
